<resources>
    <string name="app_name">App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Stress</string>
    <string name="title_notifications">Sleep</string>
    <string name = "title_daily">Daily Life</string>
    <string name = "title_data">Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">TextView</string>
    <string name="stress">Stress</string>
    <string name="daily_life">Daily Life</string>
    <string name="data">Data</string>
    <string name="morning_quiz">Morning Quiz</string>
    <string name="night_quiz">Night Quiz</string>
    <string name="_6_rate_your_stress_levels">6. Rate your stress levels.</string>
    <string name="todo">TODO</string>
    <string name="_1_how_are_you_feeling_right_now">How are you feeling right now?</string>
    <string name="sleep">Sleep</string>
    <string name="Submit">Submit</string>
    <string name="YourSleepRatings">Your sleep ratings:</string>
    <string name="WhatAffectedSleep">What negatively affected your sleep?</string>
    <string name="SleepGoals">What are your goals for sleep?</string>
    <string name="ReachedSleepGoals">I reached my sleep goals</string>
    <string name="SleepGoalPrevention">What prevented you from reaching your sleep goals?</string>
    <string name="SleepTitle">Sleep Questions</string>
    <string name="SaveWord">Save</string>
    <string name="SubmitWord">Submit</string>
    <string name="HowAreYou">How are you feeling right now?</string>
    <string name="RateSleep">How would you rate your sleep on a scale of 1-10 (10 being the best)</string>
    <string name="SleepLengthQ">How long did you sleep?(hours)</string>
    <string name="RateStress">Rate your stress levels:</string>
    <string name="WelcomeMsg">Hello! Great to have you here!</string>
    <string name="ViewQuizzes">View today\'s quizzes!</string>
    <string name="relax_time">How much time did you spend being productive?</string>
    <string name="relax_timeQ">How much time did you spend relaxing?</string>
    <string name="how_much_time_did_you_spend_exercising">How much time did you spend exercising?</string>
    <string name="rateStress">Rate your stress levels:</string>
    <string name="hr0">0 hours</string>
    <string name="hr46">4-6 hours</string>
    <string name="hr13">1-3 hours</string>
    <string name="hr6">6+ hours</string>
    <string name="smileyBtnNight1">smileyBtnNight1</string>
    <string name="smileyBtn2">smileyBtnNight2</string>
    <string name="smileyBtnNight3">😟</string>
    <string name="smileyBtnNight4">😕</string>
    <string name="smileyBtnNight5">😊</string>
    <string name="smileyBtnNight6">😔</string>
    <string name="smileyBtnNight7">🙂</string>
    <string name="smileyBtnNight9">😐</string>
    <string name="smileyBtnMorning1">😐</string>
    <string name="smileyBtnMorning2">🙂</string>
    <string name="smileyBtnMorning3">😟</string>
    <string name="smileyBtnMorning4">😊</string>
    <string name="smileyBtnMorning5">😔</string>
    <string name="smileyBtnMorning6">😐</string>
    <string name="smileyBtnMorning7">🙂</string>
    <string name="smileyBtnMorning8">😕</string>
    <string name="introMessage">Logo of app goes here</string>
    <string name="quizDailyMessage">View today\'s quizzes!</string>
    <string name="stressGoalsInput">Write down your goals! (list below)</string>
    <string name="stressReasonInput1">What has been stressing you out?</string>
    <string name="stressGoalCheckbox">I achieved my goals. **if user doesnt check this, show text box asking why</string>
    <string name="stressGoalPreventionText">What stopped you from achieving your goals?</string>
    <string name="stressSectionHeader">Stress Section</string>
    <string name="previous_quizzes">Previous Quizzes</string>
    <string name="_2_do_you_feel_cranky_or_too_tired">2. Do you feel cranky or too tired?</string>
</resources>